feature: changes structure for return-policy page

--- a/src/return-policy.html
+++ b/src/return-policy.html
@@ -1,33 +1,35 @@
 //= components/head.html
 
 <body class="return-policy">
-		//= components/header.html
+	//= components/header.html
 	<div class="return-policy__wrapper uk-container bg-full-width--gradient">
 		<div class="frame">
-			<div class="uk-width-1-2@l">
-				<ul class="breadcrumbs uk-subnav uk-subnav-divider uk-margin-medium-bottom">
-					<li><a href="#">Главная</a></li>
-					<li class="uk-active"><a href="#">Политика возврата</a></li>
-				</ul>
-				<h1 class="title title--medium uk-margin-small-bottom">Политика возврата</h1>
+			<div>
+				<div class="uk-width-1-2@l">
+					<ul class="breadcrumbs uk-subnav uk-subnav-divider uk-margin-medium-bottom">
+						<li><a href="#">Главная</a></li>
+						<li class="uk-active"><a href="#">Политика возврата</a></li>
+					</ul>
+					<h1 class="title title--medium uk-margin-small-bottom">Политика возврата</h1>
 
-				<p class="return-policy__text-large">Обмен возврат в течение 14 дней. Возврат товара надлежащего
-					качества</p>
+					<p class="return-policy__text-large">Обмен возврат в течение 14 дней. Возврат товара надлежащего
+						качества</p>
 
-				<p class="uk-margin-medium-bottom">Возврат товара надлежащего качества возможен в случае, если сохранены
-					его товарный вид, потребительские свойства, а также документ, подтверждающий факт и условия покупки
-					указанного товара. Отсутствие у покупателя указанного документа не лишает его возможности ссылаться
-					на другие доказательства приобретения товара у данного продавца.</p>
+					<p class="uk-margin-medium-bottom">Возврат товара надлежащего качества возможен в случае, если сохранены
+						его товарный вид, потребительские свойства, а также документ, подтверждающий факт и условия покупки
+						указанного товара. Отсутствие у покупателя указанного документа не лишает его возможности ссылаться
+						на другие доказательства приобретения товара у данного продавца.</p>
 
-				<p class="uk-margin-medium-bottom">Покупатель не вправе отказаться от товара надлежащего качества,
-					имеющего индивидуально-определенные свойства, если указанный товар может быть использован
-					исключительно приобретающим его потребителем. При отказе покупателя от товара продавец должен
-					возвратить ему сумму, уплаченную покупателем в соответствии с договором, за исключением расходов
-					продавца на доставку от покупателя возвращенного товара, не позднее чем через 10 дней с даты
-					предъявления покупателем соответствующего требования.</p>
+					<p class="uk-margin-medium-bottom">Покупатель не вправе отказаться от товара надлежащего качества,
+						имеющего индивидуально-определенные свойства, если указанный товар может быть использован
+						исключительно приобретающим его потребителем. При отказе покупателя от товара продавец должен
+						возвратить ему сумму, уплаченную покупателем в соответствии с договором, за исключением расходов
+						продавца на доставку от покупателя возвращенного товара, не позднее чем через 10 дней с даты
+						предъявления покупателем соответствующего требования.</p>
 
-				<p class="uk-margin-medium-bottom">При отказе клиента от товара, подарок, выданный вместе с данным
-					товаром подлежит обязательному возврату с сохранением товарного вида.</p>
+					<p class="uk-margin-medium-bottom">При отказе клиента от товара, подарок, выданный вместе с данным
+						товаром подлежит обязательному возврату с сохранением товарного вида.</p>
+				</div>
 
 				<p class="return-policy__text-bold uk-margin-bottom">При возврате покупателем товара надлежащего
 					качества с оставляются накладная или акт о возврате товара, в которых указываются:</p>
@@ -110,9 +112,10 @@
 					товара.</p>
 			</div>
 		</div>
+	</div>
 
 
-		//= components/subscribe.html
-		//= components/footer.html
+	//= components/subscribe.html
+	//= components/footer.html
 </body>
 //= components/bottom.html
